[package]
name = "reactor"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils", "alloc"] }
